--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
 /*  your css code here. If applicable */
+.container{
+	background-color: #f5f5f5;
+	height:70%;
+	width: 80%;
+	
+}
+header{
+	background-color:#011e29;
+color:white;
+	padding:10px;
+	text-align:center;
+}
+.body{
+	margin:5px;
+	display:float;
+}
+.latest-news-section{
+	height:30%;
+	width:25%;
+	float:left;
+	
+}
+.second{
+	height:60%;
+	width:25%;
+	float:left;
+	
+}
+.pictorial-news-section{
+	float:right;
+	width:40%;
+}
+section{
+	text-align:center;
+	padding:5px;
+	background-color:white;
+}
